# point-escape-game

./: README.md  main.py  pyproject.toml
src/: constants.py  core.py  object.py  resourses.py  typing.py
