[project]
name = "python-mini-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pygame>=2.6.1"]


[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.format]
quote-style = 'single'
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
split-on-trailing-comma = false
combine-as-imports = true
